html 기본틀 잡기

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Understanding TypeScript</title>
   <script src="dist/bundle.js" defer></script>
+  <link rel="stylesheet" href="app.css">
+
 </head>
 <body>
+  <div id="map">
+    <p>주소를 입력 해주세요.</p>
+  </div>
+  <form>
+    <input type="text" id="address">
+    <button type="submit">검색</button>
+  </form>
 </body>
 </html>
